[package]
name = "json2yaml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
clap = { version = "4.1.4", features = ["derive"] }
serde = "1.0.144"
serde_json = "1.0.85"
serde_yaml = "0.9.10"

[[bin]]
name = "json2yaml"
